refactoring icon alignment issue

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -23,10 +23,11 @@
 
 .fontIcon {
     margin-top:45px;
-    padding-right: 5px;
-    margin-left: 130px;
+    /* padding-right: 5px;
+    margin-left: 130px; */
     color: white;
     font-size: 3rem;
+    justify-content: center;
 } 
 
 .emhead {
